add placeholder for password

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </div>
     <hr>
     <div class="password">
-    <p id="box-el"></p>
-    <p id="box-el2"></p>
+    <p id="box-el"><span class="placeholder">Your secure password</span></p>
+    <p id="box-el2"><span class="placeholder">Alternative password</span></p>
   </div>
   </main>
 
